# pydocfix

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pydocfix_rules.md  pydoclint_rules.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/skills/release/: SKILL.md
.github/skills/rule-implementation/: SKILL.md
.github/skills/rule-testing/: SKILL.md
.github/workflows/: ci.yml  release.yml  screenshots.yml
benchmarks/: bench.py
docs/tapes/: demo.tape  diagnostic.tape  diff.tape  example.py
examples/: custom_rules.py
src/pydocfix/: __init__.py  _ansi.py  _edits.py  _filewalker.py  _parallel.py  _render.py  baseline.py  checker.py  cli.py  config.py  diagnostics.py  edits.py  fixer.py  fixes.py  models.py  noqa.py  parallel.py  plugin_loader.py  registry.py  render.py  rules.py
src/pydocfix/engine/: checker.py  fixer.py  noqa.py  parallel.py  plugin_loader.py  registry.py
src/pydocfix/rules/: __init__.py  _base.py  _edits.py  _helpers.py  _registry.py  _type_helpers.py  d200.py  d401.py  d402.py  d403.py  d404.py  d405.py  d406.py  d407.py  d408.py  d409.py  helpers.py  plugin_loader.py
src/pydocfix/rules/cls/: __init__.py  cls001.py  cls101.py  cls102.py  cls103.py  cls104.py  cls105.py  cls106.py  cls201.py  cls202.py  cls203.py  cls204.py  cls205.py  cls206.py  helpers.py
src/pydocfix/rules/doc/: __init__.py  doc001.py  doc002.py  doc003.py
src/pydocfix/rules/prm/: __init__.py  _helpers.py  prm001.py  prm002.py  prm003.py  prm004.py  prm005.py  prm006.py  prm007.py  prm008.py  prm009.py  prm101.py  prm102.py  prm103.py  prm104.py  prm105.py  prm106.py  prm201.py  prm202.py
src/pydocfix/rules/ris/: __init__.py  _helpers.py  helpers.py  ris001.py  ris002.py  ris003.py  (+2 more)
tests/: helpers.py  test_baseline.py  test_checker.py  test_cli.py  test_config.py  test_fixer.py  test_noqa.py  test_plugin_integration.py  test_plugin_loader.py  test_plugin_noqa.py  test_rules.py
tests/engine/: conftest.py  test_baseline.py  test_checker.py  test_cli.py  test_config.py  test_edits.py  test_filewalker.py  test_fixer.py  test_noqa.py  test_plugin.py  test_plugin_integration.py  test_plugin_loader.py  test_plugin_noqa.py  test_registry.py
tests/engine/_rules/: always001.py  cyclic001.py  display001.py  safe000.py  safe001.py  unsafe001.py
tests/engine/fixtures/: bar_no_period_offset.py  blanket_noqa.py  cyclic_violation.py  display_violation.py  empty_file.py  file_noqa.py  foo_docstring_noqa_plugnoqa001.py  foo_hi_no_period.py  foo_hi_short.py  foo_long_docstring.py  foo_no_period_noqa_plugnoqa001.py  greet_no_period.py  greet_with_period.py  no_violation.py  noqa_after_fix.py  noqa_x_sup001.py  partial_noqa_rewrite.py  preserve_surrounding.py  safe_violation.py  specific_noqa.py  symbols.py  two_no_period.py  two_violations.py  unsafe_violation.py  unused_blanket_noqa.py
tests/engine/synthetic_rules/: __init__.py  fix001.py  plugnoqa001.py  sup001.py  testplugin001.py
tests/rules/: __init__.py  conftest.py
tests/rules/cls/: __init__.py  test_cls001.py  test_cls101.py  test_cls102.py  test_cls103.py  test_cls104.py  test_cls105.py  test_cls106.py  test_cls201.py  test_cls202.py  test_cls203.py  test_cls204.py  test_cls205.py  test_cls206.py
tests/rules/doc/: __init__.py  test_doc001.py  test_doc002.py  test_doc003.py
tests/rules/prm/: __init__.py  test_prm001.py  test_prm002.py  test_prm003.py  test_prm004.py  test_prm005.py  test_prm006.py  test_prm007.py  test_prm008.py  test_prm009.py  test_prm101.py  test_prm102.py  test_prm103.py  test_prm104.py  test_prm105.py  test_prm106.py  test_prm201.py  test_prm202.py
tests/rules/ris/: __init__.py  test_ris001.py  test_ris002.py  test_ris003.py  test_ris004.py  test_ris005.py
tests/rules/rtn/: __init__.py  test_rtn001.py  test_rtn002.py  test_rtn003.py  test_rtn101.py  test_rtn102.py  test_rtn103.py  test_rtn104.py  test_rtn105.py  test_rtn106.py
tests/rules/sum/: __init__.py  test_sum001.py  test_sum002.py
tests/rules/yld/: __init__.py  test_yld001.py  test_yld002.py  test_yld003.py  test_yld101.py  test_yld102.py  test_yld103.py  test_yld104.py  test_yld105.py  test_yld106.py
(+245 files in other folders)
