[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydocfix"
version = "0.0.1"
description = "A Python docstring linter with auto-fix support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ryuma Asai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydocstring-rs>=0.1.1",
    "typer>=0.15",
]

[project.scripts]
pydocfix = "pydocfix.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pyright]
pythonVersion = "3.10"
extraPaths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
