[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydocfix"
version = "0.1.0b3"
description = "A Python docstring linter with auto-fix support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ryuma Asai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydocstring-rs>=0.1.10",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/ryumasai/pydocfix"
Repository = "https://github.com/ryumasai/pydocfix"
Issues = "https://github.com/ryumasai/pydocfix/issues"
Changelog = "https://github.com/ryumasai/pydocfix/releases"

[project.scripts]
pydocfix = "pydocfix.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "syrupy>=5.0",
    "ruff>=0.11",
    "ty>=0.0.32",
    "pre-commit>=4.5.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-include = ["tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ty.src]
include = ["src", "tests"]

[tool.pydocfix]
exclude = ["tests/**/fixtures/"]
